k8s/bit-bite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bit-bite-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: bitbite.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
